--- a/css/style.css
+++ b/css/style.css
@@ -10,24 +10,23 @@
 	height: 690px;
 	width: 100%;
 }
-.fondobl{
+.fondbla{
 	background-color: #FFFFFF;
+}
+#fondobl{
 	opacity: 0.9;
 }
-.fondoblanco{
-	background-color: #FFFFFF;
+#fondoblanco{
 	height: 40%;
 }
-.fondoblancoch{
-	background-color: #FFFFFF;
+#fondoblancoch{
 	height: 70%;
 }
-
 .margg{
 	margin: 8% 2% auto;
 }
 .marggb{
-	margin: 5% 0% auto;
+	margin: 5% 0% 5% 0%;
 }
 .margver{
 	margin: 10% 28% auto;
